tests/substructural/check/drop_of_out_ref.err.expected
error: at 4:13: [SUB-DropOfNonDrop] In function 'f', block 'entry': cannot drop non-Drop type &out i64
   |
 4 |             drop r;
   |             ^^^^^^
  hint: only types implementing the Drop class can be explicitly dropped
error: at 4:13: [INIT-RefObligationUnfulfilled] In function 'f', block 'entry': reference 'r' has unfulfilled obligation here (is_init=false, ends_init=true)
   |
 4 |             drop r;
   |             ^^^^^^
